# kvcache

./: AGENTS.md  Cargo.toml  README.md
apps/miniredis/: Cargo.toml
apps/miniredis/src/: command.rs  lib.rs  protocol.rs  repl.rs  server.rs
apps/miniredis/tests/: integration.rs
apps/shortlink-service/: Cargo.toml
apps/shortlink-service/src/: lib.rs  main.rs
apps/shortlink-service/tests/: http.rs
benches/: cache_policies.rs
examples/: cache_bench.rs
src/: lib.rs
