[package]
name = "shortlink-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
kvcache = { path = "../.." }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
